[package]
name = "actix-ws-prost"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"


[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
prost = "0.8.0"

actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10" }

actix-files = "0.5.0"
env_logger = "0.8.2"

pem = "0.8"
rust-crypto = "0.2.36"

actix = "0.12.0"
actix-web-actors = "3"
actix-codec = "0.4.0"
awc = "2"
futures = "0.3.1"
bytes = "0.5.3"
rand = "0.7"
actix-broker = "0.4.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0.59"
serde_derive = "1.0.117"
base64 = "0.13.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
prost-build = { version = "0.5.0" }
